tests/files/type_checker_tests/should_pass/202.cmdr
//Test that modulo operation type checks
x = 1 % 2.3;
