tests/files/type_checker_tests/should_fail/044.cmdr
//Should fail when modulo setting incompatible types
x = 3;
x %= true;
